Fixed invisible cursor in string editor for #1155. Returned and skiped drag'n'drop func tests

--- a/packages/survey-creator-core/src/components/string-editor.scss
+++ b/packages/survey-creator-core/src/components/string-editor.scss
@@ -3,6 +3,7 @@
 .svc-string-editor {
   position: static;
   .sv-string-editor {
+    display: inline-block;
     position: relative;
     outline: none;
     z-index: 2;
